feat(代码优化): 代码优化

--- a/src/pages/com/topBtnPage/com.less
+++ b/src/pages/com/topBtnPage/com.less
@@ -1,18 +1,19 @@
 .left {
   padding-bottom: 20px;
   position: absolute;
-  top: 150px;
-  left: 44px;
+  top: 120px;
+  left: 24px;
   color: #fff;
   overflow: hidden;
   overflow-y: auto;
   z-index: 1;
-  height: calc(100% - 170px);
+  height: 900px;
+  box-sizing: border-box;
+
 
   .info_main {
-    margin-top: 13px;
     padding: 22px;
-
+  
     .main-title {
       box-sizing: border-box;
       width: 100%;
