--- a/src/pages/pc/com/topBtnPage/com.less
+++ b/src/pages/pc/com/topBtnPage/com.less
@@ -7,18 +7,19 @@
   overflow: hidden;
   overflow-y: auto;
   z-index: 1;
-  height: 900px;
+  height: 920px;
   box-sizing: border-box;
 
 
   .info_main {
-    padding: 22px;
-  
+    padding: 22px 22px 10px;
+    box-sizing: border-box;
+
     .main-title {
       box-sizing: border-box;
       width: 100%;
       height: 28px;
-      background: url("../../../assets/img/bt-bg.png") no-repeat;
+      background: url("../../../../assets/img/bt-bg.png") no-repeat;
       background-size: 100% 100%;
       padding-left: 45px;
 
@@ -60,4 +61,9 @@
   100% {
     margin-left: 0;
   }
+}
+
+.left::-webkit-scrollbar {
+  display: none;
+  /* Chrome Safari */
 }
